<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillAvtivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="160dp"
            android:layout_height="54dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@+id/imageView4"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="18sp"
            android:textColor="#FFFFFF" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.498"
            android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="84dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.494" android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#FFFFFF"
                android:fontFamily="@font/montserrat" android:textSize="18sp" android:textOff="@string/beginner"
                android:textOn="@string/beginner" android:layout_marginRight="8dp" android:onClick="beginnerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#FFFFFF"
                android:fontFamily="@font/montserrat" android:textSize="18sp" android:textOff="@string/baller"
                android:textOn="@string/baller" android:layout_marginLeft="8dp" android:onClick="ballerClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="390dp"
            android:layout_height="63dp"
            android:id="@+id/finishBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:textColor="#FFFFFF"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:background="@drawable/swoosh_button"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:onClick="finishClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>